@@ -1,6 +1,12 @@
+screen.refresh.interval = 1000
+screen.tool.type = "IMAGE_VIEW"
+#film.width = 4000
+#film.height = 2400
+film.width = 1000
+film.height = 600
 ##
-#path.hybridbackforward.enable = 1
-#path.hybridbackforward.partition = 0.0
+path.hybridbackforward.enable = 1
+path.hybridbackforward.partition = 0.0
 ##batch.haltspp = 0
 #batch.haltthreshold = 0.0001
 #batch.haltthreshold.stoprendering.enable = 0
@@ -10,7 +16,6 @@
 #
 film.filter.type = "BLACKMANHARRIS"
 film.filter.width = 1.5
-film.height = 600
 film.imagepipelines.0.0.type = "NOP"
 film.imagepipelines.0.1.scale = 0.5
 film.imagepipelines.0.1.type = "TONEMAP_LINEAR"
@@ -39,7 +44,6 @@ film.outputs.2.type = "AVG_SHADING_NORMAL"
 film.outputs.3.filename = "RGB_IMAGEPIPELINE_1.png"
 film.outputs.3.index = 1
 film.outputs.3.type = "RGB_IMAGEPIPELINE"
-film.width = 1000
 lightstrategy.type = "LOG_POWER"
 opencl.cpu.use = 0
 opencl.devices.select = "110"
@@ -61,7 +65,7 @@ path.photongi.indirect.lookup.radius = 0.15000000596046448
 path.photongi.indirect.maxsize = 100000
 path.photongi.indirect.usagethresholdscale = 4
 #
-path.photongi.caustic.enabled = 1
+path.photongi.caustic.enabled = 0
 #path.photongi.caustic.lookup.maxcount = 8192
 #path.photongi.caustic.lookup.normalangle = 9.9999997090929202
 path.photongi.caustic.lookup.radius = 0.04
